--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
 <h4 style="color: red;font-size: 25px;background-color: orange"><STRONG>NOTE:</STRONG>Stop the video if you want to change the video.</h4>
 <h4 style="color: red;font-size: 25px;background-color: orange">anakeb access me to upload there videos. Don't copy right the videos read the terms</h4>
 	<h2>1.smurfs</h2>
- <iframe rel="nofollow" src="http://ok.ru/videoembed/390730877486" width="750" height="480" frameborder="0" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/xu6Kck0tfLQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  <h1>2.weck it off</h1>
  <iframe rel="nofollow" src="http://ok.ru/videoembed/48213330630" width="750" height="480" frameborder="0" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>
  <h1>3.Trolls</h1>
